working on navbar

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,3 +9,8 @@
   scroll-behavior: smooth;
 }
 
+@layer components {
+  .navbar-p {
+    @apply text-white font-bold text-lg capitalize mx-4 cursor-pointer;
+  }
+}
