--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,14 +3,18 @@
 @tailwind utilities;
 
 * {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
+  box-sizing     : border-box;
+  padding        : 0;
+  margin         : 0;
   scroll-behavior: smooth;
 }
 
 @layer components {
   .navbar-p {
-    @apply text-white font-bold text-lg capitalize mx-4 cursor-pointer;
+    @apply text-white font-bold text-lg capitalize mx-4 cursor-pointer
+  }
+
+  .navbar-button {
+    @apply text-white py-2 px-4
   }
 }
