--- a/styles/Index.css
+++ b/styles/Index.css
@@ -7,6 +7,7 @@
   --gradient-bar: linear-gradient(103.22deg, #507eeb -13.86%, #f5f2f0 99.55%);
   
   --color-bg: #040C18;
+  --color-bg-blue: #507eeb;
   --color-footer : #031B34;
   --color-blog: #042c54;
   --color-text: #81AFDD;
