--- a/styles/globals.css
+++ b/styles/globals.css
@@ -15,6 +15,6 @@
   }
 
   .navbar-button {
-    @apply text-white py-2 px-4
+    @apply text-white py-2 px-4 font-medium text-lg border-none outline-none cursor-pointer rounded-md bg-blue-600;
   }
 }
