--- a/styles/globals.css
+++ b/styles/globals.css
@@ -17,4 +17,8 @@
   .navbar-button {
     @apply text-white py-2 px-4 font-medium text-lg border-none outline-none cursor-pointer rounded-md bg-blue-600;
   }
+
+  .transition-pop {
+    @apply bg-blue-500 text-white transition ease-in-out delay-150  hover:-translate-y-1 hover:scale-110 hover:bg-blue-300 duration-300
+  }
 }
